syntax = "proto3";

package fr.unice.polytech.soa.team.j.bluegalacticx.payload;

option java_multiple_files = true;
option java_package =
    "fr.unice.polytech.soa.team.j.bluegalacticx.payload.proto";

enum EventType {
  WAITING_FOR_MISSION = 0; ON_MISSION = 1; DESTROYED = 2; DELIVERED = 3;
  NOT_DELIVERED = 4;
  IN_ROLLOUT = 5;
}

message PayloadStatusRequest {
  EventType eventType = 1;
  string payloadId = 2;
}

message PayloadRequest {
  message SpaceCoordinate {
    uint32 x = 1;
    uint32 y = 2;
    uint32 z = 3;
  }
  EventType payloadStatus = 1;
  string payloadId = 2;
  string missionId = 3;
  SpaceCoordinate position = 4;
}
